@@ -74,3 +74,12 @@ class TestExecutioner(UpgradeTestCase):
                 u'the.package:default -> 1002 (Update email address)\n'
                 u'the.package:default -> 1003 (Update email from name)',
                 transaction.get().description)
+
+    def test_resources_are_recooked_after_installing_upgrades(self):
+        self.package.with_profile(
+            Builder('genericsetup profile')
+            .with_upgrade(Builder('plone upgrade step').upgrading('1000', to='1001')))
+        with self.package_created():
+            self.install_profile('the.package:default', version='1000')
+            with self.assert_resources_recooked():
+                self.install_profile_upgrades('the.package:default')
